# intel8080

./: .gitattributes  .gitignore  .gitmodules  .travis.linux.yml  .travis.yml  CMakeLists.txt  Intel8080.cc  Intel8080.h  Intel8080Test.cc  Intel8080Test.h  LICENSE  Makefile  Makefile.bak.mk  README.md  assembleTests.sh  assembler.py  coverage.info  cpu.py  debug  dump  emulator  label algorithm.md  machine.py  main.cc  opcodes.csv  ram.py  tests  tests.cc
assembler/: assembler.py  formatter.py  hello  hello.asm  i8080asm  instructions.json  op  opcodes.json  test.asm
hextobin/: Cargo.toml
hextobin/src/: hex.rs  main.rs
inc/: asmconstraint.hh  asmexception.hh  asmoperand.hh  assembler.hh  cpu.hh  emu.hh  file_loader.hh  interpreter.hh  opcode.hh  ram.hh  token.hh
src/: Intel8080.cc  Intel8080.h  asmconstraint.cc  assembler.cc  assembler.hh  cpu.cc  cpu.hh  emu.cc  emu.hh  file_loader.cc  file_loader.hh  interpreter.cc  main.cc  opcode.cc  opcode.hh  ram.cc  ram.hh  test.cc  test.hh  token.cc
src/argparser/: Argparser.cc  Argparser.h  Option.cc  Option.h
src/tests/: test_cpu.cc  test_cpu.hh  test_opcodes_0x0x.cc  test_opcodes_0x0x.hh  test_opcodes_0x1x.cc  test_opcodes_0x1x.hh  test_opcodes_0x2x.cc  test_opcodes_0x2x.hh  test_opcodes_0x3x.cc  test_opcodes_0x3x.hh  test_opcodes_0x8x.cc  test_opcodes_0x8x.hh  test_opcodes_0xcx.cc  test_opcodes_0xcx.hh  test_opcodes_0xdx.hh  test_opcodes_0xex.hh  test_opcodes_0xfx.hh  test_opcodes_add.cc  test_opcodes_add.hh  test_opcodes_bitwise.hh  (+4 more)
tests/: add.s  cma.s  cmc.s  dcr.s  inr.s  ldax.s  mov.asm  mov.s  stax.s  stc.s
(+41 files in other folders)
